# tv-ai-robot

./: 99-arduino.rules  README.md  pyproject.toml  robot.service  run.sh  setup.sh
arduino/: analog0_to_serial.ino
arduino/analog0_to_serial/: analog0_to_serial.ino
scripts/: download.sh  skip_n_seconds.sh
src/: main.py  pyhacktv.py  singletonprocess.py
utils/: hacktv
